@@ -18,6 +18,8 @@ Changed
     Store the user project in the database for each host, it can be over written
     anytime with a header (#194)
 
+    Use the LXD recursion param to drasticly improve fetchin instances time
+
 Fixed
     Cant add more than one profile to deploy cloud config (#198)
 
